--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://agrimpaneru.github.io/demo/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme="papermod"
