--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,25 +9,32 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout source code
       - name: Checkout source
         uses: actions/checkout@v3
         with:
-          submodules: true
+          submodules: true  # Ensure submodules are fetched
 
+      # Step 2: Checkout gh-pages branch for deployment
       - name: Checkout destination
         uses: actions/checkout@v3
         if: github.ref == 'refs/heads/main'
         with:
           ref: gh-pages
-          path: built-site
+          path: built-site  # Save the gh-pages branch in a separate directory
 
+      # Step 3: Setup Hugo
       - name: Setup Hugo
         run: |
           curl -L -o /tmp/hugo.tar.gz 'https://github.com/gohugoio/hugo/releases/download/v0.110.0/hugo_extended_0.110.0_linux-amd64.tar.gz'
-          tar -C ${RUNNER_TEMP} -zxvf /tmp/hugo.tar.gz hugo          
-      - name: Build
-        run: ${RUNNER_TEMP}/hugo
+          tar -C ${RUNNER_TEMP} -zxvf /tmp/hugo.tar.gz hugo
 
+      # Step 4: Build the Hugo site
+      - name: Build
+        run: |
+          ${RUNNER_TEMP}/hugo --minify
+
+      # Step 5: Deploy to GitHub Pages
       - name: Deploy
         if: github.ref == 'refs/heads/main'
         run: |
@@ -37,4 +44,4 @@ jobs:
           git config user.name 'dhij'
           git config user.email 'davidhwang.ij@gmail.com'
           git commit -m 'Updated site'
-          git push          
+          git push
