--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
 baseURL = 'https://agrimpaneru.github.io/demo/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme="papermod"
+theme="PaperMod"
