--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,100 @@
-baseURL = 'https://agrimpaneru.github.io/demo/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme="PaperMod"
+baseURL: "https://agrim.github.io/prtfoio/"
+languageCode: en-us
+title: Agrim Paneru
+theme: PaperMod
+
+menu:
+  main:
+    - identifier: home
+      name: Home
+      url: /
+      weight: 10
+    - identifier: blog
+      name: Blog
+      url: /blog
+      weight: 20
+    - identifier: projects
+      name: Projects
+      url: /projects
+      weight: 30
+    - identifier: experience
+      name: Experience
+      url: /experience
+      weight: 40
+    - identifier: search
+      name: Search
+      url: /search
+      weight: 50
+    # - identifier: tags
+    #   name: Tags
+    #   url: /tags
+    #   weight: 60
+    # - identifier: notes
+    #   name: Notes
+    #   url: https://notes.arkalim.org
+    #   weight: 70
+
+params:
+  # theme
+  showToc: true
+  TocOpen: false
+  ShowBreadCrumbs: true
+  ShowCodeCopyButtons: true
+  hideMeta: false
+
+  # for enchanced SEO
+  env: production
+
+  # Home Page
+  profileMode:
+    enabled: true
+    title: "Agrim Paneru"
+    subtitle: Hi, I’m Agrim, a final-year Computer Engineering student at Pulchowk Campus, IOE. I have a strong passion for machine learning and enjoy exploring its diverse applications
+
+ 
+    # imageUrl: "home/IMG_3893.jpeg"
+    imageWidth: 250
+    imageHeight: 250
+    buttons:
+      - name: Resume
+        url: "https://drive.google.com/file/d/1HIN6M2OoNCBzqWh7X6ytdg9dwSC361ki/view?usp=sharing"
+
+  # List View
+  hideDescriptionInList: false
+
+  # cover image for posts
+  cover:
+    hiddenInList: false # hide on list pages and home
+    hiddenInSingle: false # hide on single page
+
+  socialIcons:
+    - name: "email"
+      url: "https://mail.google.com/mail/?view=cm&to=agrimpaneru00@gmail.com"
+    - name: "linkedin"
+      url: "https://www.linkedin.com/in/agrim-paneru-6307a42a1/"
+    - name: "github"
+      url: "https://github.com/agrimpaneru"
+
+
+  # text search
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    keys: ["title", "permalink", "summary", "content"]
+
+# for search using Fuse.js
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
+
+# allow HTML in MD
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
